Update index.html with alloka code

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ЖК Гармония в Краснодаре - официальный сайт застройщика</title>
+    <script async type="text/javascript" src="https://analytics.alloka.ru/script/820aba6a1a39758e"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -55,6 +56,7 @@
           webvisor:true
       });
     </script>
+    
     <noscript><div><img src="https://mc.yandex.ru/watch/90612720" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
